testdata/baselines/reference/submodule/conformance/typedefCrossModule4.errors.txt
mod3.js(3,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== mod3.js (1 errors) ====
    /** @typedef {number} Foo */
    class Bar { }
    module.exports = { Foo: Bar };
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
    